# memory-leak-detector

./: CMakeLists.txt  main.c  mld.c  mld.h
tests/array_of_structures/: array_of_structures.c  array_of_structures.h
tests/structure_offset/: structure_offset.c  structure_offset.h
